# grpcincpp-workshop-42

./: BUILDLOCAL.md  CMakeLists.txt  client.cpp  main.cpp  server.cpp
.devcontainer/: devcontainer.json
proto/helloworld/v1/: hello_world_api.proto
